# cps_haskell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.local  cps-haskell.cabal
app/: Main.hs
benchmark/: Main.hs
benchmark/Grammars/Base/Expr/: ExprFastBenchmark.hs
benchmark/Grammars/Megaparsec/: ExprNoLeftRecBenchmark.hs
benchmark/Grammars/Memo/: MiscBenchmark.hs
benchmark/Grammars/Memo/Expr/: ExprFastBenchmark.hs  ExprNoLeftRecBenchmark.hs
benchmark/Grammars/Memo/Lama/Expr/: LamaBenchmark.hs
grammars-test/: Main.hs
grammars-test/Grammars/: MiscSpec.hs
grammars-test/Grammars/Base/: MiscSpec.hs
grammars-test/Grammars/Base/Expr/: ExprSpec.hs
grammars-test/Grammars/Expr/: ExprSpec.hs
grammars-test/Grammars/Memo/: MiscSpec.hs
grammars-test/Grammars/Memo/Expr/: ExprFastSpec.hs  ExprNoLeftRecSpec.hs  ExprShallowSpec.hs  ExprSpec.hs
grammars-test/Grammars/Memo/Lama/Expr/: ExprSpec.hs
grammars/Grammars/: Misc.hs
grammars/Grammars/Base/: Misc.hs
grammars/Grammars/Base/Expr/: ExprFastParser.hs  ExprParser.hs
grammars/Grammars/Expr/: Expr.hs  ExprGenerator.hs
grammars/Grammars/Megaparsec/: ExprNoLeftRecParser.hs  Interface.hs
grammars/Grammars/Memo/: Misc.hs
grammars/Grammars/Memo/Expr/: Expr.hs  ExprFastParser.hs  ExprGenerator.hs  ExprNoLeftRecParser.hs  ExprParser.hs  ExprShallowParser.hs
grammars/Grammars/Memo/Lama/Expr/: Expr.hs  ExprGenerator.hs  ExprParser.hs
grammars/Grammars/Memo/Lama/Expr/input/: left.txt  middle.txt  right.txt
src/: MyLib.hs
src/CPS/Parser/: Base.hs  BaseCont.hs  Base_backup.txt  Core.hs  Memo.hs  NewBase.hs  Primitives.hs
src/CPS/Stream/: MemoFun.hs  Regex.hs  Stream.hs
src/Parser/: Core.hs  Parser.hs  Primitives.hs
test/: Main.hs  MiscGrammarsSpec.hs  MyLibSpec.hs  TestHelper.hs
test/CPS/Parser/: MemoSpec.hs  PrimitivesSpec.hs
test/Grammars/: Misc.hs
