cabal-version:      3.4
name:               cps-haskell

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:
    Monadic parser combinator library with memoized CPS.

-- A longer description of the package.
-- description:

homepage:           https://github.com/enotvtapke/cps-haskell
license:            MIT
license-file:       LICENSE
author:             Aleksandr Stupnikov
maintainer:         a.stupnikov05@gmail.com

-- A copyright notice.
-- copyright:
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

common depends
    build-depends: 
      base ^>=4.17.2.1

library
    import:           depends, warnings
    exposed-modules:
        CPS.Parser.Base,
        CPS.Parser.Primitives,
        CPS.Parser.Memo,
        CPS.Stream.Stream,

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
        mtl ^>=2.3.1,
        text ^>=2.1.1,
        unordered-containers ^>=0.2.20,
        hashable ^>=1.4.4.0,
        regex-tdfa ^>=1.3.2.2,
    hs-source-dirs:   src
    default-language: GHC2021

library grammars
    import:           depends, warnings
    exposed-modules:
        Grammars.Base.Misc,
        Grammars.Base.Expr.ExprParser,
        Grammars.Memo.Misc,
        Grammars.Memo.Expr.Expr,
        Grammars.Memo.Expr.ExprParser,
        Grammars.Memo.Expr.ExprGenerator,

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
        cps-haskell,
        text ^>=2.1.1,
        random ^>=1.2.1.2,

    hs-source-dirs:   grammars
    default-language: GHC2021

executable cps-haskell
    import:           depends, warnings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
        cps-haskell,
        text ^>=2.1.1,

    hs-source-dirs:   app
    default-language: GHC2021

test-suite cps-haskell-test
    import:           depends, warnings
    default-language: GHC2021
    other-modules:     
        CPS.Parser.PrimitivesSpec,
        CPS.Parser.MemoSpec,

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        cps-haskell,

        tasty ^>=1.5,
        tasty-hspec ^>=1.2.0.4,
        hspec ^>=2.11.7,

        text ^>=2.1.1,

test-suite cps-haskell-grammars-test
    import:           depends, warnings
    default-language: GHC2021
    other-modules: 
        Grammars.Base.MiscSpec,
        Grammars.Base.Expr.ExprSpec,
        Grammars.Memo.MiscSpec,
        Grammars.Memo.Expr.ExprSpec,

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    type:             exitcode-stdio-1.0
    hs-source-dirs:   grammars-test
    main-is:          Main.hs
    build-depends:
        cps-haskell,
        cps-haskell:grammars,

        tasty ^>=1.5,
        tasty-hspec ^>=1.2.0.4,
        hspec ^>=2.11.7,

        text ^>=2.1.1,
