cabal-version:      3.4
name:               cps-haskell

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:
    Monadic parser combinator library with memoized CPS.

-- A longer description of the package.
-- description:

homepage:           https://github.com/enotvtapke/cps-haskell
license:            MIT
license-file:       LICENSE
author:             Aleksandr Stupnikov
maintainer:         a.stupnikov05@gmail.com

-- A copyright notice.
-- copyright:
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

common depends
    build-depends: 
      base ^>=4.17.2.1

library
    import:           depends, warnings
    exposed-modules:
        CPS.Parser.Base,
        CPS.Parser.NewBase,
        CPS.Parser.Primitives,
        CPS.Parser.Memo,
        CPS.Stream.Stream,
        CPS.Stream.Regex,
        CPS.Stream.MemoFun,

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
        mtl ^>=2.3.1,
        text ^>=2.1.1,
        unordered-containers ^>=0.2.20,
        hashable ^>=1.4.4.0,
        regex-tdfa ^>=1.3.2.2,
        deepseq ^>=1.4.8.0,

    hs-source-dirs:   src
    default-language: GHC2021

library grammars
    import:           depends, warnings
    exposed-modules:
        Grammars.Base.Misc,
        Grammars.Base.Expr.ExprParser,
        Grammars.Base.Expr.ExprFastParser,
        Grammars.Memo.Misc,
        Grammars.Memo.Expr.Expr,
        Grammars.Memo.Expr.ExprParser,
        Grammars.Memo.Expr.ExprNoLeftRecParser,
        Grammars.Memo.Expr.ExprFastParser,
        Grammars.Memo.Expr.ExprGenerator,
        Grammars.Memo.Expr.ExprShallowParser,
        Grammars.Memo.Lama.Expr.Expr,
        Grammars.Memo.Lama.Expr.ExprParser,
        Grammars.Memo.Lama.Expr.ExprGenerator,
        Grammars.Megaparsec.ExprNoLeftRecParser,
        Grammars.Megaparsec.Interface,

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
        cps-haskell,
        text ^>=2.1.1,
        random ^>=1.2.1.2,
        deepseq ^>=1.4.8.0,
        megaparsec ^>=9.6.1,
        unordered-containers ^>=0.2.20,
        mtl ^>=2.3.1,

    hs-source-dirs:   grammars
    default-language: GHC2021

executable cps-haskell
    import:           depends, warnings
    main-is:          Main.hs
    ghc-options:
        -fprof-auto
        "-with-rtsopts=-p -s -hT -i0.1"
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:
        cps-haskell,
        text ^>=2.1.1,
        cps-haskell:grammars

    hs-source-dirs:   app
    default-language: GHC2021

test-suite cps-haskell-test
    import:           depends, warnings
    default-language: GHC2021
    other-modules:     
        CPS.Parser.PrimitivesSpec,
        CPS.Parser.MemoSpec,

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        cps-haskell,

        tasty ^>=1.5,
        tasty-hspec ^>=1.2.0.4,
        hspec ^>=2.11.7,

        text ^>=2.1.1,

test-suite cps-haskell-grammars-test
    import:           depends, warnings
    default-language: GHC2021
    other-modules: 
        Grammars.Base.MiscSpec,
        Grammars.Base.Expr.ExprSpec,
        Grammars.Memo.MiscSpec,
        Grammars.Memo.Expr.ExprSpec,
        Grammars.Memo.Expr.ExprFastSpec,
        Grammars.Memo.Expr.ExprNoLeftRecSpec,
        Grammars.Memo.Expr.ExprShallowSpec,
        Grammars.Memo.Lama.Expr.ExprSpec,

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    type:             exitcode-stdio-1.0
    hs-source-dirs:   grammars-test
    main-is:          Main.hs
    build-depends:
        cps-haskell,
        cps-haskell:grammars,

        tasty ^>=1.5,
        tasty-hspec ^>=1.2.0.4,
        hspec ^>=2.11.7,

        text ^>=2.1.1,

benchmark cps-haskell-benchmark
    import:           depends, warnings
    default-language: GHC2021
    other-modules: 
        Grammars.Base.Expr.ExprFastBenchmark,
        Grammars.Memo.Expr.ExprFastBenchmark,
        Grammars.Memo.Expr.ExprNoLeftRecBenchmark,
        Grammars.Memo.MiscBenchmark,
        Grammars.Memo.Lama.Expr.LamaBenchmark,
        Grammars.Megaparsec.ExprNoLeftRecBenchmark,

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    type:             exitcode-stdio-1.0
    hs-source-dirs:   benchmark
    main-is:          Main.hs
    -- Profiling options
    ghc-options:
        -fprof-auto
        "-with-rtsopts=-p -s -hT -i0.1"
    build-depends:
        cps-haskell,
        cps-haskell:grammars,

        text ^>=2.1.1,
        megaparsec ^>=9.6.1,
        criterion ^>=1.6.3.0,
        containers ^>=0.6.7,
        statistics ^>=0.16.2.1,
        cassava ^>=0.5.3.0,
        bytestring ^>=0.11.5.3,
        tasty-bench ^>=0.3.5,